# ai-radar

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: sources.yaml
scripts/: hourly.sh
src/ai_radar/: __init__.py  cli.py  config.py  dedup.py  models.py  notifier.py  publisher.py  ranker.py  storage.py  summarizer.py  web.py
src/ai_radar/collectors/: __init__.py  arxiv.py  base.py  hf_papers.py  rss.py
